package pt.ipp.isep.dei.domain;

public enum Status {
    ELIGIBLE, PARTIAL, UNDISPATCHABLE
}
